# EE569HW

HW1/: CMakeLists.txt  README.txt
HW1/p1/: Clahe.cpp  Clahe.h  Demosaic.cpp  Demosaic.h  Histogram.cpp  Histogram.h  Histogram.py  main.cpp
HW1/p1/resultImage/: BCity.raw  BDimLight.raw  CCity.raw  DHouse.raw  TCity.raw
HW1/p2/: Basic.cpp  Basic.h  Bilateral.cpp  Bilateral.h  ColorImage.cpp  ColorImage.h  NonLocalMeans.cpp  NonLocalMeans.h  main.cpp
HW1/p2/resultImage/: NLM_color.raw  NLM_gray.raw  bilateral_color.raw  bilateral_gray.raw  flower_color.raw  gaussian_color.raw  gaussian_gray.raw  (+2 more)
HW1/p3/: WaterColor.cpp  WaterColor.h  main.cpp
HW2/: CMakeLists.txt  README.txt
HW2/p1/: ColorTrans.cpp  ColorTrans.h  EdgeDetection.cpp  EdgeDetection.h  main  main.cpp  p1.m
HW2/p2/: HalfToned.cpp  HalfToned.h  RWImage.cpp  RWImage.h  main.cpp
HW2/p3/: ErrorDiffusion.cpp  ErrorDiffusion.h  main.cpp
HW3/: CMakeLists.txt  README.txt
HW3/p1/: ImageTransform.cpp  ImageTransform.h  RWImage.cpp  RWImage.h  main.cpp
HW3/p1/resultImage/: reverseWarpCat.raw  reverseWarpDog.raw  warpCat.raw  warpDog.raw
HW3/p2/: HomographicTrans.cpp  HomographicTrans.h  RWImage.cpp  RWImage.h  main.cpp
HW3/p3/: MorphologyProc.cpp  MorphologyProc.h  RWImage.cpp  RWImage.h  main.cpp
HW3/p3/resultImage/: beans_output.raw  board_1.raw  board_2.raw  board_3.raw  flower_thin_final.raw  flower_thin_intermediate.raw  jar_thin_final.raw  jar_thin_intermediate.raw  spring_thin_final.raw  spring_thin_intermediate.raw
HW4/: CMakeLists.txt  README.txt
HW4/p1/: RWImage.cpp  RWImage.h  TextureAnalysis.cpp  TextureAnalysis.h  main.cpp
HW4/p2/: TextureSegmentation.cpp  TextureSegmentation.h  main.cpp
HW4/p3/: ImageMatching.cpp  ImageMatching.h  main.cpp
hw5/p1/: CIFAR-10.py  Fashion_MNIST.py  MNIST.py
hw5/p2/: solver.py
hw6/Channelwise-Saab-Transform-main/: main.py
(+10 files in other folders)
